<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context="com.borsch_team.calorycounter.ui.formResult.FormResultActivity">

    <TextView
        android:id="@+id/res"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.30"
        android:translationY="20dp"
        android:alpha="0"

        tools:translationY="0dp"
        tools:alpha="1"/>

    <TextView
        android:id="@+id/tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/calories_tip"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/res"
        android:translationY="20dp"
        android:alpha="0"

        tools:translationY="0dp"
        tools:alpha="1"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tip"
        tools:layout_editor_absoluteX="24dp"
        android:translationY="20dp"
        android:alpha="0"

        tools:translationY="0dp"
        tools:alpha="1">

        <Button
            android:id="@+id/RecalculateButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="10"
            android:backgroundTint="@color/purple_500"
            android:text="@string/recalculate" />

        <Button
            android:id="@+id/EditButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="12"
            android:backgroundTint="@color/purple_500"
            android:text="@string/edit" />
    </LinearLayout>

    <Button
        android:id="@+id/ContinueButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="12"
        android:layout_marginHorizontal="24dp"
        android:text="@string/continueText"
        android:backgroundTint="@color/purple_500"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:translationY="20dp"
        android:alpha="0"

        tools:translationY="0dp"
        tools:alpha="1"/>

</androidx.constraintlayout.widget.ConstraintLayout>