<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/productName"
        android:textColor="@color/purple_700"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:id="@+id/mealName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_style"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/calories"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mealName" />

    <EditText
        android:id="@+id/calories"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_style"
        android:layout_marginEnd="8dp"
        android:padding="8dp"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Ккал"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/proteins"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calories" />

    <EditText
        android:id="@+id/proteins"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_style"
        android:layout_marginEnd="8dp"
        android:padding="8dp"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="г"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fats"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/proteins" />

    <EditText
        android:id="@+id/fats"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_style"
        android:layout_marginEnd="8dp"
        android:padding="8dp"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="г"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/carbohydrates"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fats" />

    <EditText
        android:id="@+id/carbohydrates"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_style"
        android:layout_marginEnd="8dp"
        android:padding="8dp"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="г"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView18" />

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>